# repo-app1397-haven-backend

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.pipeline/: azure-pipeline-dev.yaml  azure-pipeline-prod.yaml  azure-pipeline-qa.yaml
aiexpert/: create_container_client.py  main.py  server.py
aiexpert/assistants/: base.py
aiexpert/auth/: base.py
aiexpert/authen_token/: base.py
aiexpert/azure/: azure_monitor_logging.py  identity_utils.py
aiexpert/conversations/: base.py
aiexpert/diam/: group_utils.py  service_account.py
aiexpert/exception_handling/: base.py
aiexpert/groups/: base.py
aiexpert/initialization/: base.py
aiexpert/routers/: assistants.py  authen.py  conversation_summary.py  diam.py  groups.py  init.py  users.py
aiexpert/sql/: connection.py  connection1.py  schema.py  schema1.py
aiexpert/user/: base.py
aiexpert/utils/: configurations.py  crypto.py
cacert/: get-cert.sh
design/: authn_and_authz.wsd
local/: init.sql
manifests/dev/: configmap.yaml  route.yaml
manifests/prod/: configmap.yaml  deploy.yaml  route.yaml
manifests/qa/: configmap.yaml  deploy.yaml  route.yaml  service.yaml
